# ArcanoidSFML

./: .gitignore  CMakeLists.txt  README.md
Framework/: CMakeLists.txt
Framework/inc/: Framework.h  logger.hpp
Framework/src/: launch.cpp  logger.cpp
Project/: CMakeLists.txt
Project/src/: defines.hpp  game.cpp  helper.cpp
Project/src/core/: collision.cpp  collision.hpp  vector2d.hpp
Project/src/math/: collision.hpp
Project/src/objects/: ball.cpp  ball.hpp  block.cpp  block.hpp  block_types.cpp  block_types.hpp  boost.cpp  boost.hpp  helper.cpp  helper.hpp  map.cpp  map.hpp  player.cpp  player.hpp  stats.cpp  stats.hpp
